Actualización del botón y comportamiento del video

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             </p>
 
             <button id="toggleVideo" class="boton">
-                Ver tráiler oficial
+                Ver tráiler 
             </button>
         </section>
 
