--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 
 
     <footer class="footer">
-        <p>lección usando REM derechos reservados por Andrew Joel ©😾</p>
+        <p>lección usando html y rem derechos reservados por Andrew Joel ©😾</p>
     </footer>
 
 
