--- a/index.html
+++ b/index.html
@@ -3,46 +3,67 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Iconos en Interfaces Web - 3° Bachillerato</title>
+    <title>Dragon Ball | Lección Web</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
     <header class="header">
-        <h1><i class="fas fa-icons"></i> Iconos en Interfaces Web</h1>
-        <h2>Tercero de Bachillerato - Técnica: Trabajo Práctico</h2>
+        <h1><i class="fas fa-fire"></i> Dragon Ball-Lección Web</h1>
+        <h2>Obra de Akira Toriyama</h2>
     </header>
 
     <main class="contenedor">
 
-        <!-- SECCIÓN INFORMATIVA -->
         <section class="card">
-            <h3><i class="fas fa-lightbulb text-warning"></i> Objetivo Principal</h3>
+            <h3><i class="fas fa-info-circle"></i> ¿Qué es Dragon Ball?</h3>
             <p>
-                Inserten y estilicen iconos correctamente en una página HTML usando bibliotecas populares 
-                (Font Awesome o Bootstrap Icons), aplicando clases para tamaño, color y posición.
+                Dragon Ball es una de las franquicias de anime y manga más influyentes
+                del mundo. Fue creada por Akira Toriyama y sigue las aventuras de Son Goku,
+                un guerrero que lucha por proteger la Tierra.
             </p>
         </section>
 
-        <!-- PREGUNTA CLAVE -->
-        <section class="card">
-            <h3><i class="fas fa-question-circle text-info"></i> ¿Por qué los iconos son mejores que texto?</h3>
+        <section class="card accion">
+            <h3><i class="fas fa-video"></i> Video destacado</h3>
             <p>
-                Los iconos en botones como "carrito" o "menú" ofrecen:
+                Presiona el botón para mostrar u ocultar el tráiler oficial
+                directamente en la página.
             </p>
-            <ul>
-                <li><strong>Claridad visual:</strong> Comunican información de forma inmediata</li>
-                <li><strong>Universalidad:</strong> Se entienden en cualquier idioma</li>
-                <li><strong>Ahorro de espacio:</strong> Ocupan menos lugar en la interfaz</li>
-            </ul>
+
+            <button id="toggleVideo" class="boton">
+                <i class="fas fa-play-circle"></i> Ver tráiler 
+            </button>
         </section>
 
-        <!-- SECCIÓN DE EJEMPLOS DE ICONOS -->
+        <section class="card video" id="seccionVideo">
+            <h3><i class="fas fa-film"></i> Tráiler oficial</h3>
+
+            <div class="video-container">
+                <iframe
+                    src="https://www.youtube.com/embed/xfeYnzXtdSs"
+                    title="Dragon Ball Tráiler Oficial"
+                    allowfullscreen>
+                </iframe>
+            </div>
+        </section>
+
         <section class="card">
-            <h3><i class="fas fa-example"></i> Ejemplos de Iconos (6+ diferentes)</h3>
+            <h3><i class="fas fa-users"></i> Personajes y elementos</h3>
+            <div class="imagenes">
+                <img src="images/goku.jpg" alt="Goku">
+                <img src="images/vegeta.jpg" alt="Vegeta">
+                <img src="images/dragonballs.png" alt="Esferas del Dragón">
+            </div>
+        </section>
+
+        <!-- SECCIÓN DE ICONOS EN LA PÁGINA - LECCIÓN 3° BACHILLERATO -->
+        <section class="card">
+            <h3><i class="fas fa-icons"></i> Ejemplos de Iconos en Interfaces Web</h3>
+            <p><small><strong>Lección de 3° Bachillerato - Tema: Iconos en interfaces web</strong></small></p>
             
-            <!-- Fila 1: Iconos básicos -->
+            <!-- 6+ Iconos diferentes -->
             <div class="iconos-grid">
                 <div class="icono-item">
                     <i class="fas fa-shopping-cart"></i>
@@ -56,10 +77,6 @@
                     <i class="fas fa-user"></i>
                     <p>Usuario</p>
                 </div>
-            </div>
-
-            <!-- Fila 2: Más iconos -->
-            <div class="iconos-grid">
                 <div class="icono-item">
                     <i class="fas fa-search"></i>
                     <p>Búsqueda</p>
@@ -75,9 +92,9 @@
             </div>
         </section>
 
-        <!-- ICONO EN BOTÓN -->
-        <section class="card accion">
-            <h3><i class="fas fa-mouse"></i> Icono en Botón</h3>
+        <!-- Iconos en Botones -->
+        <section class="card">
+            <h3><i class="fas fa-mouse"></i> Iconos en Botones</h3>
             <p>Los iconos dentro de botones mejoran la experiencia del usuario:</p>
             <button class="boton">
                 <i class="fas fa-download"></i> Descargar
@@ -87,27 +104,27 @@
             </button>
         </section>
 
-        <!-- ICONO CON TEXTO Y MARGEN -->
+        <!-- Iconos con texto y margen -->
         <section class="card">
-            <h3><i class="fas fa-align-left"></i> Icono junto a Texto con Margen</h3>
+            <h3><i class="fas fa-align-left"></i> Iconos junto a Texto (con margen)</h3>
             <p>
-                <i class="fas fa-envelope" style="margin-right: 10px; color: #007bff;"></i>
+                <i class="fas fa-envelope" style="margin-right: 10px; color: #ffcc80;"></i>
                 correo@ejemplo.com
             </p>
             <p>
-                <i class="fas fa-phone" style="margin-right: 10px; color: #28a745;"></i>
+                <i class="fas fa-phone" style="margin-right: 10px; color: #81c784;"></i>
                 +34 123 456 789
             </p>
             <p>
-                <i class="fas fa-map-marker-alt" style="margin-right: 10px; color: #dc3545;"></i>
+                <i class="fas fa-map-marker-alt" style="margin-right: 10px; color: #ef9a9a;"></i>
                 Madrid, España
             </p>
         </section>
 
-        <!-- ICONO CON TAMAÑO GRANDE -->
+        <!-- Iconos con tamaños diferentes -->
         <section class="card">
-            <h3>Iconos con Diferentes Tamaños</h3>
-            <p style="text-align: center;">
+            <h3><i class="fas fa-expand"></i> Iconos con Diferentes Tamaños</h3>
+            <p style="text-align: center; display: flex; justify-content: center; gap: 1rem; align-items: center;">
                 <i class="fas fa-star" style="font-size: 1.5rem;"></i>
                 <i class="fas fa-star fa-2x"></i>
                 <i class="fas fa-star fa-3x"></i>
@@ -115,30 +132,30 @@
             </p>
         </section>
 
-        <!-- ICONO CON COLOR -->
+        <!-- Iconos con colores diferentes -->
         <section class="card">
-            <h3>Iconos con Colores Diferentes</h3>
-            <div style="display: flex; justify-content: space-around; text-align: center;">
+            <h3><i class="fas fa-palette"></i> Iconos con Colores Diferentes</h3>
+            <div style="display: flex; justify-content: space-around; text-align: center; flex-wrap: wrap; gap: 1rem;">
                 <div>
-                    <i class="fas fa-heart fa-3x" style="color: #dc3545;"></i>
-                    <p>Amor (Rojo)</p>
+                    <i class="fas fa-heart fa-3x" style="color: #ef5350;"></i>
+                    <p style="margin-top: 0.5rem;">Rojo</p>
                 </div>
                 <div>
-                    <i class="fas fa-leaf fa-3x" style="color: #28a745;"></i>
-                    <p>Naturaleza (Verde)</p>
+                    <i class="fas fa-leaf fa-3x" style="color: #66bb6a;"></i>
+                    <p style="margin-top: 0.5rem;">Verde</p>
                 </div>
                 <div>
-                    <i class="fas fa-crown fa-3x" style="color: #ffc107;"></i>
-                    <p>Premium (Oro)</p>
+                    <i class="fas fa-crown fa-3x" style="color: #ffca28;"></i>
+                    <p style="margin-top: 0.5rem;">Oro</p>
                 </div>
                 <div>
-                    <i class="fas fa-water fa-3x" style="color: #17a2b8;"></i>
-                    <p>Agua (Azul)</p>
+                    <i class="fas fa-water fa-3x" style="color: #42a5f5;"></i>
+                    <p style="margin-top: 0.5rem;">Azul</p>
                 </div>
             </div>
         </section>
 
-        <!-- ICONO EN TARJETA/MENÚ -->
+        <!-- Iconos en tarjetas de menú -->
         <section class="card">
             <h3><i class="fas fa-th"></i> Iconos en Tarjetas de Menú</h3>
             <div class="menu-cards">
@@ -165,16 +182,16 @@
             </div>
         </section>
 
-        <!-- LISTA DE COTEJO -->
+        <!-- Lista de cotejo -->
         <section class="card">
-            <h3><i class="fas fa-clipboard-list"></i> Lista de Cotejo (Instrumento de Evaluación)</h3>
+            <h3><i class="fas fa-clipboard-list"></i> Lista de Cotejo - Evaluación</h3>
             <table class="tabla-cotejo">
                 <thead>
                     <tr>
                         <th>Criterio</th>
-                        <th>Sí</th>
-                        <th>Parcial</th>
-                        <th>No</th>
+                        <th style="width: 10%;">Sí</th>
+                        <th style="width: 10%;">Parcial</th>
+                        <th style="width: 10%;">No</th>
                         <th>Observación</th>
                     </tr>
                 </thead>
@@ -194,28 +211,28 @@
                         <td></td>
                     </tr>
                     <tr>
-                        <td>Usó icono junto a texto con margen (me-, ms-)</td>
+                        <td>Usó icono junto a texto con margen</td>
                         <td>☑</td>
                         <td>☐</td>
                         <td>☐</td>
                         <td></td>
                     </tr>
                     <tr>
-                        <td>Cambió tamaño de al menos un icono (fa-, fs-)</td>
+                        <td>Cambió tamaño de al menos un icono</td>
                         <td>☑</td>
                         <td>☐</td>
                         <td>☐</td>
                         <td></td>
                     </tr>
                     <tr>
-                        <td>Aplicó color diferente a al menos un icono (text-*)</td>
+                        <td>Aplicó color diferente a iconos</td>
                         <td>☑</td>
                         <td>☐</td>
                         <td>☐</td>
                         <td></td>
                     </tr>
                     <tr>
-                        <td>Usó icono dentro de un botón o enlace</td>
+                        <td>Usó icono dentro de un botón</td>
                         <td>☑</td>
                         <td>☐</td>
                         <td>☐</td>
@@ -232,24 +249,31 @@
             </table>
         </section>
 
-        <!-- INFORMACIÓN CDN -->
-        <section class="card">
-            <h3><i class="fas fa-code"></i> Información Técnica</h3>
-            <h4>CDN utilizado:</h4>
-            <pre><code>&lt;link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"&gt;</code></pre>
-            <h4>Clases comunes:</h4>
-            <ul>
-                <li><strong>Tamaño:</strong> fa-2x, fa-3x, fa-4x (multiplica el tamaño base)</li>
-                <li><strong>Color:</strong> style="color: #hexcode;" o clases de utilidad</li>
-                <li><strong>Posición/Margen:</strong> style="margin-right: 10px;" o style="margin-left: 10px;"</li>
-            </ul>
-        </section>
-
     </main>
 
     <footer class="footer">
-        <p><i class="fas fa-copyright"></i> 3° Bachillerato - Lección de Iconos en Web | Derechos Reservados © Andrew Joel</p>
+        <p><i class="fas fa-copyright"></i> Lección usando HTML, CSS y Font Awesome - Derechos reservados por Andrew Joel ©</p>
     </footer>
+
+    <script>
+        const boton = document.getElementById("toggleVideo");
+        const seccionVideo = document.getElementById("seccionVideo");
+
+        let videoVisible = false;
+
+        boton.addEventListener("click", () => {
+            videoVisible = !videoVisible;
+
+            if (videoVisible) {
+                seccionVideo.style.display = "block";
+                boton.innerHTML = '<i class="fas fa-pause-circle"></i> Ocultar tráiler oficial';
+                seccionVideo.scrollIntoView({ behavior: "smooth" });
+            } else {
+                seccionVideo.style.display = "none";
+                boton.innerHTML = '<i class="fas fa-play-circle"></i> Ver tráiler oficial';
+            }
+        });
+    </script>
 
 </body>
 </html>
