--- a/index.html
+++ b/index.html
@@ -113,11 +113,11 @@
             </p>
             <p>
                 <i class="fas fa-phone" style="margin-right: 10px; color: #81c784;"></i>
-                +34 123 456 789
+                +593
             </p>
             <p>
                 <i class="fas fa-map-marker-alt" style="margin-right: 10px; color: #ef9a9a;"></i>
-                Madrid, España
+               Ecuador- Quito
             </p>
         </section>
 
